--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web",
   "version": "1.0.0",
-  "description": "",
+  "description": "Note: Please ensure you have installed <code><a href=\"https://nodejs.org/en/download/\">nodejs</a></code>",
   "scripts": {
     "start": "parcel ./*.html ",
     "build": "parcel build ./*.html  --dist-dir ./build"
@@ -10,5 +10,16 @@
   "license": "ISC",
   "devDependencies": {
     "parcel": "^2.7.0"
+  },
+  "main": "rotable.js",
+  "keywords": [],
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
+    "twilio": "^5.2.2"
   }
+}
+"scripts": {
+  "start": "parcel serve ./src/index.html",
+  "build": "parcel build ./src/index.html"
 }
