--- a/package.json
+++ b/package.json
@@ -2,23 +2,5 @@
   "name": "web",
   "version": "1.0.0",
   "private": true,
-  "description": "Marketing Website",
-  "scripts": {
-    "dev": "parcel serve ./src/index.html",
-    "build": "parcel build ./src/index.html --dist-dir dist --public-url ./",
-    "clean": "rm -rf dist .parcel-cache"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "parcel": "^2.7.0",
-    "rimraf": "^5.0.1"
-  },
-  "main": "rotable.js",
-  "keywords": [],
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "express": "^4.19.2",
-    "twilio": "^5.2.2"
-  }
+  "description": "Marketing Website"
 }
